--- a/style.css
+++ b/style.css
@@ -413,45 +413,45 @@ color: rgb(0, 55, 182);
 } */
 
 /* Mobile devices (portrait and landscape) */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 787px) {
   body {
     font-size: 14px;
   }
 
   .bg-img{
-    background-image: url("images/banner-img.jpg");
+    background-image: url("images/banner-img-mob.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 15vh;
-  width: 44vh;
+  height: 33vh;
+  width: 55vh;
 }
 
 .bg-img-2{
-  background-image: url("images/bannae-img-2.jpg");
+  background-image: url("images/bannae-img-2-mob.jpg");
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
-height: 15vh;
-width: 44vh;
+height: 33vh;
+width: 53vh;
 }
 
 .bg-img-3{
-  background-image: url("images/bg-img-3.jpg");
+  background-image: url("images/bg-img-3-mob.jpg");
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
-height: 15vh;
+height: 33vh;
 width: 44vh;
 }
 
 .perfumes-slogan,.perfumes-slogan-arrow{
   color: rgb(174, 0, 255);
-  padding-top: 6vh;
+  padding-top: 15vh;
   font-family: "ChocolateBoxDecorative Regular";
   font-weight: bold;
   margin-left: 10px;
-  font-size: 8PX;
+  font-size: 10PX;
   text-align: justify;
 }
 
@@ -472,10 +472,10 @@ margin-left: 40px;
 
 .perfumes-slogan-two,.perfumes-slogan-arrow-2{
   color: rgb(0, 93, 126);
-  padding-top: 6vh;
+  padding-top: 15vh;
   font-family: "ChocolateBoxDecorative Regular";
   font-weight: bold;
-  font-size: 8px;
+  font-size: 11px;
   margin-left: 5px;
   /* text-align: center; */
 }
@@ -497,7 +497,7 @@ color: rgb(0 126 38);
 padding-top :2vh;
 font-family: "ChocolateBoxDecorative Regular";
 font-weight: bold;
-font-size: 6px;
+font-size: 11px;
 margin-left: 55px;
 padding-right: 80px;
 /* text-align: center; */
@@ -586,7 +586,7 @@ font-weight: bold;
 
 .owl-nav{
   position: absolute;
-  top: 76px;
+  top: 210px;
 }
 
 .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
