--- a/style.css
+++ b/style.css
@@ -412,8 +412,23 @@ color: rgb(0, 55, 182);
   width: 50vh;
 } */
 
+
+
+
+@media only screen and  (orientation:landscape){
+  .bg-img{
+    background-image: url("images/banner-img.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 67vh;
+  width: 215vh;
+}
+}
+
+
 /* Mobile devices (portrait and landscape) */
-@media only screen and (max-width: 787px) {
+@media only screen and (max-width: 790px) {
   body {
     font-size: 14px;
   }
@@ -517,12 +532,12 @@ font-weight: bold;
 }
 
 .collection-text{
-  font-size: 8px;
+  font-size: 9px;
   margin-top: 0px;
 }
 
 .collection-text-2{
-  font-size: 6.2px;
+  font-size: 7.2px;
   margin-top: 0px;
   padding: 0px;
 }
@@ -549,9 +564,9 @@ font-weight: bold;
 
 .product-card {
   width: 284px;
-  margin-top: 75px;
+  margin-top: 93px;
   position: relative;
-  margin-left: 40px;
+  margin-left: 55px;
 }
 
 .product-card-1{
@@ -560,6 +575,7 @@ font-weight: bold;
 
 .quote-perfumes{
   font-size: 10px;
+  margin-top: 96px;
 }
 
 .owl-dots button.owl-dot {
@@ -586,7 +602,7 @@ font-weight: bold;
 
 .owl-nav{
   position: absolute;
-  top: 210px;
+  top: 250px;
 }
 
 .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
