--- a/style.css
+++ b/style.css
@@ -414,17 +414,17 @@ color: rgb(0, 55, 182);
 
 
 
-
+/* 
 @media only screen and  (max-width:760px){
   .bg-img{
-    background-image: url("images/banner-img-mob.jpg");
+    background-image: url("images/banner-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   height: 33vh;
   width: 80vh;
 }
-}
+} */
 
 
 /* Mobile devices (portrait and landscape) */
@@ -433,7 +433,7 @@ color: rgb(0, 55, 182);
     font-size: 14px;
   }
   .bg-img{
-    background-image: url("images/banner-img-mob.jpg");
+    background-image: url("images/banner-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -442,12 +442,12 @@ color: rgb(0, 55, 182);
 }
 
 .bg-img-2{
-  background-image: url("images/bannae-img-2-mob.jpg");
+  background-image: url("images/bannae-img-2.jpg");
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 height: 33vh;
-width: 53vh;
+width: auto;
 }
 
 .bg-img-3{
@@ -456,7 +456,7 @@ background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 height: 33vh;
-width: 44vh;
+width: auto;
 }
 
 .perfumes-slogan,.perfumes-slogan-arrow{
@@ -508,10 +508,10 @@ margin-left: 5px;
 
 .perfumes-slogan-three{
 color: rgb(0 126 38);
-padding-top :2vh;
+padding-top :1vh;
 font-family: "ChocolateBoxDecorative Regular";
 font-weight: bold;
-font-size: 11px;
+font-size: 10px;
 margin-left: 55px;
 padding-right: 80px;
 /* text-align: center; */
@@ -549,7 +549,7 @@ font-weight: bold;
 
 
 .perfume-img-1,.perfume-img-2,.bakhoor-image{
-  height: 130px;
+  height: 145px;
 }
 
 .card-perfume,.card-perfume-2{
