--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 @font-face {
     font-family: "ChocolateBoxDecorative Regular";
     src: local("ChocolateBoxDecorative Regular"), url("fonts/C_BOX_D.woff") format("woff");
-    font-family: "TrajanPro Regular";
-    src: local("TrajanPro Regular"), url("/TrajanPro-Bold.woff") format("woff");
+    /* font-family: "TrajanPro Regular";
+    src: local("TrajanPro Regular"), url("/TrajanPro-Bold.woff") format("woff"); */
   }
 
 .bg-img{
