--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 @font-face {
     font-family: "ChocolateBoxDecorative Regular";
     src: local("ChocolateBoxDecorative Regular"), url("fonts/C_BOX_D.woff") format("woff");
+  }
+
+  @font-face {
     font-family: 'Trajan Pro Regular';
     font-style: normal;
     font-weight: normal;
