--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   background-position: center;
   background-size: cover;
   height: 70vh;
-  width: 202vh;
+  width: auto;
 }
 
 .bg-img-2{
@@ -31,7 +31,7 @@ background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 height: 70vh;
-width: 201vh;
+width: auto;
 }
 
 .bg-img-3{
@@ -40,8 +40,9 @@ background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 height: 70vh;
-width: 202vh;
+width: auto;
 }
+
 
 /* .bg-img-collection{
   background-image: url("images/bg-4.jpg");
@@ -61,16 +62,42 @@ width: 201vh;
     text-align: justify;
 }
 
+.text-collection{
+  font-family: "ChocolateBoxDecorative Regular";
+  font-size: 34.5px;
+text-align: center;
+color:rgb(24, 0, 182);
+}
+
+.btn-view-collection{
+  font-size: 18px;
+  font-family: "Trajan Pro Regular";
+}
+
+.img-collection-2{
+  height: 338px;
+  width: 633px;
+  /* border: 5px solid blue; */
+}
+
+.card-collection{
+  background-color:#00b8f5;
+  width:auto;
+  height: 338px;
+
+}
+
+/* 
 .perfumes-slogan-2,.perfumes-slogan-arrow{
 margin-left: 170px;
 
-  }
+  } */
 
 .perfumes-slogan-arrow{
     padding-top: 1vh;
     color: rgb(0, 130, 144);
     font-size: 3vh;
-    margin-left: 250px;
+    /* margin-left: 250px; */
 
     
   }
@@ -81,20 +108,20 @@ margin-left: 170px;
     font-family: "ChocolateBoxDecorative Regular";
     font-weight: bold;
     font-size: 4vh;
-    margin-left: 5px;
+    /* margin-left: 5px; */
     /* text-align: center; */
 }
 
-.perfumes-slogan-2-1,.perfumes-slogan-arrow-2{
+/* .perfumes-slogan-2-1,.perfumes-slogan-arrow-2{
   margin-left: 5px;
 
-  }
+  } */
 
 .perfumes-slogan-arrow-2{
     padding-top: 1vh;
     color: rgb(46, 0, 144);
     font-size: 3vh;
-    margin-left: 250px;
+    /* margin-left: 250px; */
 }
 
 .perfumes-slogan-three{
@@ -103,8 +130,10 @@ color: rgb(0 126 38);
   font-family: "ChocolateBoxDecorative Regular";
   font-weight: bold;
   font-size: 25px;
+  font-size: 3vh;
+
   /* margin-left: 5px; */
-  padding-right: 80px;
+  /* padding-right: 80px; */
   /* text-align: center; */
 }
 
@@ -466,10 +495,10 @@ width: auto;
 
 .perfumes-slogan,.perfumes-slogan-arrow{
   color: rgb(174, 0, 255);
-  padding-top: 15vh;
+  padding-top: 14vh;
   font-family: "ChocolateBoxDecorative Regular";
   font-weight: bold;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   font-size: 10PX;
   text-align: justify;
 }
@@ -484,31 +513,27 @@ margin-left: 40px;
   padding-top:0px;
   color: rgb(0, 130, 144);
   font-size: 8px;
-  margin-left: 49px;
+  /* margin-left: 49px; */
 
   
 }
 
 .perfumes-slogan-two,.perfumes-slogan-arrow-2{
   color: rgb(0, 93, 126);
-  padding-top: 15vh;
+  padding-top: 14vh;
   font-family: "ChocolateBoxDecorative Regular";
   font-weight: bold;
   font-size: 11px;
-  margin-left: 5px;
+  /* margin-left: 5px; */
   /* text-align: center; */
 }
 
-.perfumes-slogan-2-1,.perfumes-slogan-arrow-2{
-margin-left: 5px;
-
-}
 
 .perfumes-slogan-arrow-2{
   padding-top: 0px;
   color: rgb(46, 0, 144);
   font-size: 8px;
-  margin-left: 49px;
+  /* margin-left: 49px; */
 }
 
 .perfumes-slogan-three{
@@ -517,8 +542,8 @@ padding-top :1vh;
 font-family: "ChocolateBoxDecorative Regular";
 font-weight: bold;
 font-size: 10px;
-margin-left: 55px;
-padding-right: 80px;
+/* margin-left: 55px; */
+/* padding-right: 80px; */
 /* text-align: center; */
 }
 
