--- a/style-two.css
+++ b/style-two.css
@@ -12,10 +12,25 @@
 
 
 .about-us-text{
-
     font-family: 'Trajan Pro Regular';
     font-size: 25px;
 }
+
+.founder-phrase{
+    font-family: 'Trajan Pro Regular';
+    font-size: 25px;
+}
+
+.director-text{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+.name-founder{
+    font-family: "ChocolateBoxDecorative Regular";
+    font-size: 30px;
+}
+
 
 .what-phrase{
     font-family: 'Trajan Pro Regular';
@@ -122,6 +137,18 @@
     }
   }
 
+  .img-founder{
+    width: auto;
+    height: 80vh;
+    border-radius: 300px;
+    border: 5px solid cyan;
+  }
+
+  .img-founder:hover{
+    height: 85vh;
+    border: 5px solid violet;
+
+  }
 
   @media only screen  and (max-width: 790px) {
     .about-us-text {
@@ -131,5 +158,10 @@
     .what-phrase{
         font-size: 14px;
     }
+
+    .founder-phrase{
+        font-size: 20px;
+    }
   }
   
+
