--- a/style-two.css
+++ b/style-two.css
@@ -147,8 +147,9 @@
   .img-founder:hover{
     height: 85vh;
     border: 5px solid violet;
-
+    box-shadow: 0 0 100px rgb(253, 106, 130); 
   }
+
 
   @media only screen  and (max-width: 790px) {
     .about-us-text {
